--- a/public/demo.css
+++ b/public/demo.css
@@ -4,3 +4,16 @@
 .footer {
   background: none;
 }
+
+/* 以下 CSS 用于夜间测试 */
+/* .card {
+  color: #eeeeee;
+  background-color: #222222;
+}
+.card strong{
+  color: currentColor;
+}
+.card pre {
+  color: currentColor;
+  background-color: transparent;
+} */
